Add JVM argument for native access to JavaFX graphics